--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <label>Display Name</label>
         <input type="text" name="username" placeholder="Display Name" required autocomplete="off">
         <label>Room</label>
-        <input type="text" name="room" placeholder="Room" required>
+        <input type="text" name="room" placeholder="Room" required autocomplete="off">
         <button>Join</button>
       </form>
     </div>
